# growth-analytics-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  test_precommit_demo.py
airflow/dags/: bronze_conversions.py  bronze_feature_releases.py  bronze_feature_usage_events.py  bronze_user_signups.py  config.py  gold_feature_conversion_impact.py  saas_plg_pipeline.py  silver_feature_states.py  silver_feature_usage_facts.py  silver_user_dim.py
airflow/tests/: test_dag.py
data/raw/: _feature_users_metadata.json  conversions.jsonl  feature_releases.json  feature_usage_events.jsonl  user_signups.jsonl
notebooks/: analysis_demo.ipynb
scripts/: generate_synthetic_data.py  validate_bronze.py
spark/jobs/: bronze_ingestion.py  gold_cohort_analysis.py  silver_scd_transform.py
spark/jobs/bronze/: main.py
spark/jobs/bronze/conversions/: extract.py  main.py  schema.py  validate.py
spark/jobs/bronze/feature_releases/: extract.py  main.py  schema.py  validate.py
spark/jobs/bronze/feature_usage_events/: extract.py  main.py  schema.py  validate.py
spark/jobs/bronze/user_signups/: extract.py  main.py  schema.py  validate.py
spark/jobs/data_quality/: __init__.py  validators.py
spark/jobs/gold/: main.py
spark/jobs/gold/feature_conversion_impact/: aggregation.py  main.py  schema.py  validate.py
spark/jobs/silver/: main.py
spark/jobs/silver/feature_states/: main.py  schema.py  transformation.py  validate.py
spark/jobs/silver/feature_usage_facts/: main.py  schema.py  transformation.py  validate.py
spark/jobs/silver/user_dim/: main.py  schema.py  transformation.py  validate.py
spark/tests/: __init__.py  conftest.py  test_bronze_ingestion.py  test_data_quality.py  test_gold_cohort_analysis.py  test_silver_scd_transform.py
